feat: [#68966] Run pulls in a single transaction